# miienlp

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
Examples/GV_OCR/: README.md
Examples/TokenCounts/: test_counts.py
documentation/: README.md
documentation/developer_documentation/: autoYAML.md  co-occurence.md  ocr.md  sentimentAnalysis.md  textCleaning.md  tokenCounts.md  weat.md  wordEmbeddings.md
documentation/miie_ra_documentation/: dataAggregation.md  ocr.md  sentimentAnalysis.md  textCleaning.md  tokenCounts.md  weat.md  wordEmbeddings.md
documentation/user_documentation/: co-occurence.md  dataAggregation.md  ocr.md  sentimentAnalysis.md  textCleaning.md  tokenCounts.md  weat.md  wordEmbeddings.md
examples/: README.md  co_occurence.md  ocr_example.md  python_installation.md  sentimentAnalysis_example.md  text_cleaning.md  tokenCounts_example.md  weat_example.md  wordEmbeddings_example.md
examples/CoOccurence/: README.md
examples/GV_OCR/: test_ocr.py
examples/TokenCounts/: README.md
examples/WordEmbeddings/: README.md
examples/aggregation/: README.md  metadata.csv  metadata_protagonist.csv  test_aggregation.py
examples/embeddings/: test_word_embeddings.py
examples/test_data/: appearance.json  clean.csv  example_book.txt  example_book_excerpt.txt  example_co-occurence.txt  example_domain_appearance.txt  example_group-female.txt
miienlp/: requirements.txt
miienlp/AutomaticYaml/: automatic_yaml.py
miienlp/CoOccurrence/: README.md  co_occurrence.py  input.yaml  utils.py
unittest/: README.md
(+243 files in other folders)
