[metadata]
name = miienlp
version = 0.0.10
description = Natural Language Processing pipeline for analyzing the representation in text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://miielab.com
author = The MiiE Team
author_email = team@miielab.com
license = MIT
license_file = LICENSE
platforms = any
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
    Documentation = https://miielab.com/Software/Documentation
    Source Code = https://github.com/miielab/miienlp
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    nltk==3.5
    spacy==3.0.3
    pandas==1.2.3
    PyYAML==5.4.1

[options.packages.find]
include = miienlp, miienlp.*
